# first-test-rust-ntex

./: .env.example  Cargo.toml  README.md
migrations/2023-12-14-192209_change_fields_to_array/: up.sql
src/: lib.rs  main.rs
src/controller/: json.rs  name.rs  ping.rs
src/data-types/: ping-type.rs
src/db/: db_postgres.rs  mod.rs
src/errors/: error.rs
src/models/: mod.rs  students_model.rs
src/schemas/: json_wrapper.rs  students_sch.rs
src/services/: mod.rs  openapi.rs  ping.rs  student_service.rs
