[package]
name = "first-test"
authors = ["Kamal Jamali <kamal.jamali63@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
chrono = { version = "0.4.6", features = ["serde"] }
utoipa = "4"
utoipa-swagger-ui = "5"


diesel = { version = "1.4.7", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
lazy_static = "1.4"


dotenv = "0.15.0"
r2d2 = "0.8.10"
