[package]
name = "first-test"
authors = ["Kamal Jamali <kamal.jamali63@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ntex = { version = "0.7", features = ["tokio"] }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde-json-core = "0.5.1"
json = "0.12"
chrono = { version = "0.4.6", features = ["serde"] }
utoipa = "4"
utoipa-swagger-ui = "5"

quote = "1.0"
syn = { version = "2.0.39", features = ["derive"] }
proc-macro2 = "1.0"
heck = "0.4.0"

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
lazy_static = "1.4"


dotenv = "0.15.0"
r2d2 = "0.8.10"
